[patch] update deps

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
         "./test-files",
         "./ts.out"
     ],
-    "extends": "virmator/base-configs/base-tsconfig.json",
+    "extends": "virmator/base-configs/tsconfig.base.json",
     "ts-node": {
         "compilerOptions": {
             "module": "NodeNext",
