--- a/.npmignore
+++ b/.npmignore
@@ -1,15 +1,17 @@
 **/*/readme-examples/
 **/*/test/
+*.book-helper.*
+*.book.*
 *.d.ts.map
 *.test-helper.*
 *.test.*
 *.tgz
 .*
-.not-committed
+.not-committed/
 /Icon?
 /configs/
 /coverage/
-/cspell.config.js
+/cspell.config.cjs
 /graphics/
 /src/
 /www-static/
