[major] switch to ESM, update deps and configs

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "cli-args-vir",
-    "version": "0.0.3",
+    "version": "1.0.0",
     "description": "Yet another cli args extraction tool (for Node.js).",
     "keywords": [
         "cli",
@@ -15,56 +15,73 @@
     },
     "repository": {
         "type": "git",
-        "url": "https://github.com/electrovir/cli-args-vir"
+        "url": "git+https://github.com/electrovir/cli-args-vir.git"
     },
     "license": "(MIT or CC0 1.0)",
     "author": {
         "name": "electrovir",
         "url": "https://github.com/electrovir"
     },
-    "main": "dist/index.js",
-    "types": "dist/index.d.ts",
+    "type": "module",
+    "main": "src/index.ts",
+    "module": "src/index.ts",
+    "types": "src/index.ts",
     "scripts": {
         "compile": "virmator compile",
         "docs": "virmator docs",
         "format": "virmator format",
-        "publish": "virmator publish \"npm run compile && npm run test:all\"",
-        "test": "virmator test",
-        "test:all": "concurrently --colors --kill-others-on-fail -c auto --names types,tests,spelling,format,docs,deps \"npm run test:types\" \"npm run test:coverage\" \"npm run test:spelling\" \"npm run test:format\" \"npm run test:docs\" \"npm run test:deps\"",
+        "lint": "virmator lint fix",
+        "publish": "virmator publish npm run test:all",
+        "start": "tsx src/index.ts",
+        "test": "virmator test node",
+        "test:all": "npm run compile && concurrently --colors --kill-others-on-fail -c auto --names tests,spelling,format,docs,deps,lint \"npm run test:coverage\" \"npm run test:spelling\" \"npm run test:format\" \"npm run test:docs\" \"npm run test:deps\" \"npm run test:lint\"",
         "test:coverage": "npm run test coverage",
         "test:deps": "virmator deps check",
         "test:docs": "virmator docs check",
         "test:format": "virmator format check",
+        "test:lint": "virmator lint",
         "test:spelling": "virmator spellcheck",
-        "test:types": "tsc --noEmit"
+        "test:update": "npm run test update"
     },
     "devDependencies": {
-        "@augment-vir/chai": "^28.1.0",
-        "@electrovir/nyc": "^15.1.0-fix0",
-        "@istanbuljs/nyc-config-typescript": "^1.0.2",
-        "@types/chai": "^4.3.16",
-        "@types/mocha": "^10.0.6",
-        "@types/node": "^20.14.2",
-        "chai": "^4.3.10",
-        "cspell": "^8.8.4",
-        "dependency-cruiser": "^16.3.3",
-        "esbuild": "^0.21.5",
-        "istanbul-smart-text-reporter": "^1.1.4",
-        "markdown-code-example-inserter": "^1.0.0",
-        "mocha": "^10.4.0",
-        "mocha-spec-reporter-with-file-names": "^0.0.3",
-        "npm-check-updates": "~16.12.3",
-        "prettier": "^3.3.2",
+        "@augment-vir/assert": "^30.3.0",
+        "@augment-vir/test": "^30.3.0",
+        "@eslint/eslintrc": "^3.1.0",
+        "@eslint/js": "^9.12.0",
+        "@stylistic/eslint-plugin": "^2.9.0",
+        "@stylistic/eslint-plugin-ts": "^2.9.0",
+        "@types/node": "^22.7.8",
+        "@typescript-eslint/eslint-plugin": "^8.8.0",
+        "c8": "^10.1.2",
+        "cspell": "^8.15.4",
+        "dependency-cruiser": "^16.4.2",
+        "esbuild": "^0.24.0",
+        "eslint": "^9.12.0",
+        "eslint-config-prettier": "^9.1.0",
+        "eslint-plugin-jsdoc": "^50.3.1",
+        "eslint-plugin-monorepo-cop": "^1.0.2",
+        "eslint-plugin-playwright": "^1.6.2",
+        "eslint-plugin-prettier": "^5.2.1",
+        "eslint-plugin-require-extensions": "^0.1.3",
+        "eslint-plugin-sonarjs": "^2.0.3",
+        "eslint-plugin-unicorn": "^56.0.0",
+        "istanbul-smart-text-reporter": "^1.1.5",
+        "markdown-code-example-inserter": "^3.0.0",
+        "npm-check-updates": "^17.1.4",
+        "prettier": "^3.3.3",
         "prettier-plugin-interpolated-html-tags": "^1.0.5",
         "prettier-plugin-jsdoc": "^1.3.0",
         "prettier-plugin-multiline-arrays": "^3.0.6",
-        "prettier-plugin-organize-imports": "^3.2.4",
-        "prettier-plugin-packagejson": "^2.5.0",
+        "prettier-plugin-organize-imports": "^4.1.0",
+        "prettier-plugin-packagejson": "^2.5.3",
         "prettier-plugin-sort-json": "^4.0.0",
         "prettier-plugin-toml": "^2.0.1",
-        "ts-node": "^10.9.2",
-        "typedoc": "^0.25.13",
-        "typescript": "^5.3.3",
-        "virmator": "^11.5.2"
+        "typedoc": "^0.26.10",
+        "typescript": "^5.6.3",
+        "typescript-eslint": "^8.8.0",
+        "virmator": "^13.5.2"
+    },
+    "engines": {
+        "node": ">=22"
     }
 }
