--- a/.github/workflows/build-for-gh-pages.yml
+++ b/.github/workflows/build-for-gh-pages.yml
@@ -4,21 +4,27 @@ on:
     push:
         branches:
             - dev
+permissions:
+    contents: write
+
+concurrency:
+    group: ${{ github.workflow }}-${{ github.ref }}
+    cancel-in-progress: true
 
 jobs:
     build-for-gh-pages:
         runs-on: 'ubuntu-latest'
 
         steps:
-            - uses: actions/checkout@v3
-            - uses: actions/setup-node@v3
+            - uses: actions/checkout@v4.1.7
+            - uses: actions/setup-node@v4.0.3
               with:
                   node-version-file: '.nvmrc'
             - name: build
               run: |
                   npm ci
                   npm run docs
-            - uses: JamesIves/github-pages-deploy-action@v4
+            - uses: JamesIves/github-pages-deploy-action@v4.6.3
               with:
                   branch: 'gh-pages'
                   folder: 'dist-docs'
